code/python/ProcuretoPayInvoiceandBilling/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Procure to Pay: Invoice and Billing client library for Python

[![API Version](https://img.shields.io/badge/api-v1K-blue)]()
[![PyPi](https://img.shields.io/pypi/v/fds.sdk.ProcuretoPayInvoiceandBilling/0.1.0)](https://pypi.org/project/fds.sdk.ProcuretoPayInvoiceandBilling/v/0.1.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

API endpoints for managing and downloading FactSet Invoices

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1K
- SDK version: 0.1.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

## Requirements

* Python >= 3.7

## Installation

### Poetry

```shell
poetry add fds.sdk.utils fds.sdk.ProcuretoPayInvoiceandBilling==0.1.0
```

### pip

```shell
pip install fds.sdk.utils fds.sdk.ProcuretoPayInvoiceandBilling==0.1.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Python environment.
   1. Install and activate python 3.7+. If you're using [pyenv](https://github.com/pyenv/pyenv):

      ```sh
      pyenv install 3.9.7
      pyenv shell 3.9.7
      ```

   2. (optional) [Install poetry](https://python-poetry.org/docs/#installation).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```python
from fds.sdk.utils.authentication import ConfidentialClient

import fds.sdk.ProcuretoPayInvoiceandBilling
from fds.sdk.ProcuretoPayInvoiceandBilling.api import invoice_and_billing_api
from fds.sdk.ProcuretoPayInvoiceandBilling.models import *
from dateutil.parser import parse as dateutil_parser
from pprint import pprint

# See configuration.py for a list of all supported configuration parameters.

# Examples for each supported authentication method are below,
# choose one that satisfies your use case.

# (Preferred) OAuth 2.0: FactSetOAuth2
# See https://github.com/FactSet/enterprise-sdk#oauth-20
# for information on how to create the app-config.json file
#
# The confidential client instance should be reused in production environments.
# See https://github.com/FactSet/enterprise-sdk-utils-python#authentication
# for more information on using the ConfidentialClient class
configuration = fds.sdk.ProcuretoPayInvoiceandBilling.Configuration(
    fds_oauth_client=ConfidentialClient('/path/to/app-config.json')
)

# Basic authentication: FactSetApiKey
# See https://github.com/FactSet/enterprise-sdk#api-key
# for information how to create an API key
# configuration = fds.sdk.ProcuretoPayInvoiceandBilling.Configuration(
#     username='USERNAME-SERIAL',
#     password='API-KEY'
# )

# Enter a context with an instance of the API client
with fds.sdk.ProcuretoPayInvoiceandBilling.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = invoice_and_billing_api.InvoiceAndBillingApi(api_client)
    fits_id = "AB2C2101" # str | FITSID can be determined by concatenating the AccountNumber + two-digit year (e.g 21 for 2021) and two-digit month (e.g. 01 for January). Available AccountNumbers are available from the /listInvoices endpoint.

    try:
        # Returns Fits report by given FITSID
        # example passing only required values which don't have defaults set
        api_response = api_instance.get_fits_report_get(fits_id)

        pprint(api_response)
    except fds.sdk.ProcuretoPayInvoiceandBilling.ApiException as e:
        print("Exception when calling InvoiceAndBillingApi->get_fits_report_get: %s\n" % e)

    # # Get response, http status code and response headers
    # try:
    #     # Returns Fits report by given FITSID
    #     api_response, http_status_code, response_headers = api_instance.get_fits_report_get_with_http_info(fits_id)


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.ProcuretoPayInvoiceandBilling.ApiException as e:
    #     print("Exception when calling InvoiceAndBillingApi->get_fits_report_get: %s\n" % e)

    # # Get response asynchronous
    # try:
    #     # Returns Fits report by given FITSID
    #     async_result = api_instance.get_fits_report_get_async(fits_id)
    #     api_response = async_result.get()


    #     pprint(api_response)
    # except fds.sdk.ProcuretoPayInvoiceandBilling.ApiException as e:
    #     print("Exception when calling InvoiceAndBillingApi->get_fits_report_get: %s\n" % e)

    # # Get response, http status code and response headers asynchronous
    # try:
    #     # Returns Fits report by given FITSID
    #     async_result = api_instance.get_fits_report_get_with_http_info_async(fits_id)
    #     api_response, http_status_code, response_headers = async_result.get()


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.ProcuretoPayInvoiceandBilling.ApiException as e:
    #     print("Exception when calling InvoiceAndBillingApi->get_fits_report_get: %s\n" % e)

```

### Using Pandas

To convert an API response to a Pandas DataFrame, it is necessary to transform it first to a dictionary.
```python
import pandas as pd

response_dict = api_response.to_dict()['data']

simple_json_response = pd.DataFrame(response_dict)
nested_json_response = pd.json_normalize(response_dict)
```

### Debugging

The SDK uses the standard library [`logging`](https://docs.python.org/3/library/logging.html#module-logging) module.

Setting `debug` to `True` on an instance of the `Configuration` class sets the log-level of related packages to `DEBUG`
and enables additional logging in Pythons [HTTP Client](https://docs.python.org/3/library/http.client.html).

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```python
import logging
import fds.sdk.ProcuretoPayInvoiceandBilling

logging.basicConfig(level=logging.DEBUG)

configuration = fds.sdk.ProcuretoPayInvoiceandBilling.Configuration(...)
configuration.debug = True
```

### Configure a Proxy

You can pass proxy settings to the Configuration class:

* `proxy`: The URL of the proxy to use.
* `proxy_headers`: a dictionary to pass additional headers to the proxy (e.g. `Proxy-Authorization`).

```python
import fds.sdk.ProcuretoPayInvoiceandBilling

configuration = fds.sdk.ProcuretoPayInvoiceandBilling.Configuration(
    # ...
    proxy="http://secret:password@localhost:5050",
    proxy_headers={
        "Custom-Proxy-Header": "Custom-Proxy-Header-Value"
    }
)
```

### Custom SSL Certificate

TLS/SSL certificate verification can be configured with the following Configuration parameters:

* `ssl_ca_cert`: a path to the certificate to use for verification in `PEM` format.
* `verify_ssl`: setting this to `False` disables the verification of certificates.
  Disabling the verification is not recommended, but it might be useful during
  local development or testing.

```python
import fds.sdk.ProcuretoPayInvoiceandBilling

configuration = fds.sdk.ProcuretoPayInvoiceandBilling.Configuration(
    # ...
    ssl_ca_cert='/path/to/ca.pem'
)
```

### Request Retries

In case the request retry behaviour should be customized, it is possible to pass a `urllib3.Retry` object to the `retry` property of the Configuration.

```python
from urllib3 import Retry
import fds.sdk.ProcuretoPayInvoiceandBilling

configuration = fds.sdk.ProcuretoPayInvoiceandBilling.Configuration(
    # ...
)

configuration.retries = Retry(total=3, status_forcelist=[500, 502, 503, 504])
```


## Documentation for API Endpoints

All URIs are relative to *https://api-sandbox.factset.com/procuretopay/invoice-and-billing*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*InvoiceAndBillingApi* | [**get_fits_report_get**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceAndBillingApi.md#get_fits_report_get) | **GET** /getFitsReport | Returns Fits report by given FITSID
*InvoiceAndBillingApi* | [**get_invoice_get**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceAndBillingApi.md#get_invoice_get) | **GET** /getInvoice | Returns PDF of specific invoice
*InvoiceAndBillingApi* | [**invoice_details_get**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceAndBillingApi.md#invoice_details_get) | **GET** /invoiceDetails | Returns details on specific invoice.
*InvoiceAndBillingApi* | [**list_invoices_get**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceAndBillingApi.md#list_invoices_get) | **GET** /listInvoices | Returns all available invoices


## Documentation For Models

 - [GetFitsReport](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v1/docs/GetFitsReport.md)
 - [InvoiceDetails](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceDetails.md)
 - [InvoiceDetailsBillingAdjustments](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceDetailsBillingAdjustments.md)
 - [InvoiceDetailsNonRecurringDetails](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceDetailsNonRecurringDetails.md)
 - [InvoiceDetailsServiceDetails](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceDetailsServiceDetails.md)
 - [InvoiceDetailsServiceDetailsExchangeFees](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceDetailsServiceDetailsExchangeFees.md)
 - [InvoiceDetailsStatementofAccountDetails](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceDetailsStatementofAccountDetails.md)
 - [InvoiceDetailsSubscriptionChanges](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceDetailsSubscriptionChanges.md)
 - [InvoiceDetailsSubscriptionChangesExchanges](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceDetailsSubscriptionChangesExchanges.md)
 - [InvoiceDetailsTaxDetails](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceDetailsTaxDetails.md)
 - [ListInvoices](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v1/docs/ListInvoices.md)


## Documentation For Authorization


## FactSetApiKey

- **Type**: HTTP basic authentication


## FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Notes for Large OpenAPI documents
If the OpenAPI document is large, imports in fds.sdk.ProcuretoPayInvoiceandBilling.apis and fds.sdk.ProcuretoPayInvoiceandBilling.models may fail with a
RecursionError indicating the maximum recursion limit has been exceeded. In that case, there are a couple of solutions:

Solution 1:
Use specific imports for apis and models like:
- `from fds.sdk.ProcuretoPayInvoiceandBilling.api.default_api import DefaultApi`
- `from fds.sdk.ProcuretoPayInvoiceandBilling.model.pet import Pet`

Solution 2:
Before importing the package, adjust the maximum recursion limit as shown below:
```
import sys
sys.setrecursionlimit(1500)
import fds.sdk.ProcuretoPayInvoiceandBilling
from fds.sdk.ProcuretoPayInvoiceandBilling.apis import *
from fds.sdk.ProcuretoPayInvoiceandBilling.models import *
```

## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

