code/python/ProcuretoPayInvoiceandBilling/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Procure to Pay: Invoice and Billing client library for Python

[![API Version](https://img.shields.io/badge/api-v2.0.0-blue)](https://developer.factset.com/api-catalog/invoice-and-billing)
[![PyPi](https://img.shields.io/pypi/v/fds.sdk.ProcuretoPayInvoiceandBilling/0.3.0)](https://pypi.org/project/fds.sdk.ProcuretoPayInvoiceandBilling/v/0.3.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

API for retrieving invoice details

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.0.0
- SDK version: 0.3.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Python >= 3.7

## Installation

### Poetry

```shell
poetry add fds.sdk.utils fds.sdk.ProcuretoPayInvoiceandBilling==0.3.0
```

### pip

```shell
pip install fds.sdk.utils fds.sdk.ProcuretoPayInvoiceandBilling==0.3.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Python environment.
   1. Install and activate python 3.10+. If you're using [pyenv](https://github.com/pyenv/pyenv):

      ```sh
      pyenv install 3.10.0
      pyenv shell 3.10.0
      ```

   2. (optional) [Install poetry](https://python-poetry.org/docs/#installation).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```python
from fds.sdk.utils.authentication import ConfidentialClient

import fds.sdk.ProcuretoPayInvoiceandBilling
from fds.sdk.ProcuretoPayInvoiceandBilling.api import invoice_and_billing_api
from fds.sdk.ProcuretoPayInvoiceandBilling.models import *
from dateutil.parser import parse as dateutil_parser
from pprint import pprint

# See configuration.py for a list of all supported configuration parameters.

# Examples for each supported authentication method are below,
# choose one that satisfies your use case.

# (Preferred) OAuth 2.0: FactSetOAuth2
# See https://github.com/FactSet/enterprise-sdk#oauth-20
# for information on how to create the app-config.json file
#
# The confidential client instance should be reused in production environments.
# See https://github.com/FactSet/enterprise-sdk-utils-python#authentication
# for more information on using the ConfidentialClient class
configuration = fds.sdk.ProcuretoPayInvoiceandBilling.Configuration(
    fds_oauth_client=ConfidentialClient('/path/to/app-config.json')
)

# Basic authentication: FactSetApiKey
# See https://github.com/FactSet/enterprise-sdk#api-key
# for information how to create an API key
# configuration = fds.sdk.ProcuretoPayInvoiceandBilling.Configuration(
#     username='USERNAME-SERIAL',
#     password='API-KEY'
# )

# Enter a context with an instance of the API client
with fds.sdk.ProcuretoPayInvoiceandBilling.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = invoice_and_billing_api.InvoiceAndBillingApi(api_client)
    id = "AB2C2503" # str | Concatenation of AccountID and Date as YYMM

    try:
        # Get a PDF of the provided invoiceId
        # example passing only required values which don't have defaults set
        api_response = api_instance.download_invoice(id)

        pprint(api_response)
    except fds.sdk.ProcuretoPayInvoiceandBilling.ApiException as e:
        print("Exception when calling InvoiceAndBillingApi->download_invoice: %s\n" % e)

    # # Get response, http status code and response headers
    # try:
    #     # Get a PDF of the provided invoiceId
    #     api_response, http_status_code, response_headers = api_instance.download_invoice_with_http_info(id)


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.ProcuretoPayInvoiceandBilling.ApiException as e:
    #     print("Exception when calling InvoiceAndBillingApi->download_invoice: %s\n" % e)

    # # Get response asynchronous
    # try:
    #     # Get a PDF of the provided invoiceId
    #     async_result = api_instance.download_invoice_async(id)
    #     api_response = async_result.get()


    #     pprint(api_response)
    # except fds.sdk.ProcuretoPayInvoiceandBilling.ApiException as e:
    #     print("Exception when calling InvoiceAndBillingApi->download_invoice: %s\n" % e)

    # # Get response, http status code and response headers asynchronous
    # try:
    #     # Get a PDF of the provided invoiceId
    #     async_result = api_instance.download_invoice_with_http_info_async(id)
    #     api_response, http_status_code, response_headers = async_result.get()


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.ProcuretoPayInvoiceandBilling.ApiException as e:
    #     print("Exception when calling InvoiceAndBillingApi->download_invoice: %s\n" % e)

```

### Using Pandas

To convert an API response to a Pandas DataFrame, it is necessary to transform it first to a dictionary.
```python
import pandas as pd

response_dict = api_response.to_dict()['data']

simple_json_response = pd.DataFrame(response_dict)
nested_json_response = pd.json_normalize(response_dict)
```

### Debugging

The SDK uses the standard library [`logging`](https://docs.python.org/3/library/logging.html#module-logging) module.

Setting `debug` to `True` on an instance of the `Configuration` class sets the log-level of related packages to `DEBUG`
and enables additional logging in Pythons [HTTP Client](https://docs.python.org/3/library/http.client.html).

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```python
import logging
import fds.sdk.ProcuretoPayInvoiceandBilling

logging.basicConfig(level=logging.DEBUG)

configuration = fds.sdk.ProcuretoPayInvoiceandBilling.Configuration(...)
configuration.debug = True
```

### Configure a Proxy

You can pass proxy settings to the Configuration class:

* `proxy`: The URL of the proxy to use.
* `proxy_headers`: a dictionary to pass additional headers to the proxy (e.g. `Proxy-Authorization`).

```python
import fds.sdk.ProcuretoPayInvoiceandBilling

configuration = fds.sdk.ProcuretoPayInvoiceandBilling.Configuration(
    # ...
    proxy="http://secret:password@localhost:5050",
    proxy_headers={
        "Custom-Proxy-Header": "Custom-Proxy-Header-Value"
    }
)
```

### Custom SSL Certificate

TLS/SSL certificate verification can be configured with the following Configuration parameters:

* `ssl_ca_cert`: a path to the certificate to use for verification in `PEM` format.
* `verify_ssl`: setting this to `False` disables the verification of certificates.
  Disabling the verification is not recommended, but it might be useful during
  local development or testing.

```python
import fds.sdk.ProcuretoPayInvoiceandBilling

configuration = fds.sdk.ProcuretoPayInvoiceandBilling.Configuration(
    # ...
    ssl_ca_cert='/path/to/ca.pem'
)
```

### Request Retries

In case the request retry behaviour should be customized, it is possible to pass a `urllib3.Retry` object to the `retry` property of the Configuration.

```python
from urllib3 import Retry
import fds.sdk.ProcuretoPayInvoiceandBilling

configuration = fds.sdk.ProcuretoPayInvoiceandBilling.Configuration(
    # ...
)

configuration.retries = Retry(total=3, status_forcelist=[500, 502, 503, 504])
```


## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/procure-to-pay/invoice-and-billing/v2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*InvoiceAndBillingApi* | [**download_invoice**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v2/docs/InvoiceAndBillingApi.md#download_invoice) | **GET** /invoices/{id}/download | Get a PDF of the provided invoiceId
*InvoiceAndBillingApi* | [**fits_report**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v2/docs/InvoiceAndBillingApi.md#fits_report) | **GET** /invoices/{id}/fits-report | Get FITS report
*InvoiceAndBillingApi* | [**invoice_details**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v2/docs/InvoiceAndBillingApi.md#invoice_details) | **GET** /invoices/{id} | Get invoice details
*InvoiceAndBillingApi* | [**list_accounts**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v2/docs/InvoiceAndBillingApi.md#list_accounts) | **GET** /accounts | Returns a list of available accounts


## Documentation For Models

 - [AccountDetail](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v2/docs/AccountDetail.md)
 - [Accounts](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v2/docs/Accounts.md)
 - [BillingAddress](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v2/docs/BillingAddress.md)
 - [BillingAdjustment](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v2/docs/BillingAdjustment.md)
 - [ErrorObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v2/docs/ErrorObject.md)
 - [ErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v2/docs/ErrorResponse.md)
 - [Invoice](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v2/docs/Invoice.md)
 - [InvoiceData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v2/docs/InvoiceData.md)
 - [Product](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v2/docs/Product.md)
 - [ProductDetail](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v2/docs/ProductDetail.md)
 - [ProductGroup](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v2/docs/ProductGroup.md)
 - [ProductGroups](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v2/docs/ProductGroups.md)
 - [ServiceDetail](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v2/docs/ServiceDetail.md)
 - [StatementOfAccount](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v2/docs/StatementOfAccount.md)
 - [SubscriptionChange](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v2/docs/SubscriptionChange.md)
 - [TaxDetail](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayInvoiceandBilling/v2/docs/TaxDetail.md)


## Documentation For Authorization


## FactSetApiKey

- **Type**: HTTP basic authentication


## FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Notes for Large OpenAPI documents
If the OpenAPI document is large, imports in fds.sdk.ProcuretoPayInvoiceandBilling.apis and fds.sdk.ProcuretoPayInvoiceandBilling.models may fail with a
RecursionError indicating the maximum recursion limit has been exceeded. In that case, there are a couple of solutions:

Solution 1:
Use specific imports for apis and models like:
- `from fds.sdk.ProcuretoPayInvoiceandBilling.api.default_api import DefaultApi`
- `from fds.sdk.ProcuretoPayInvoiceandBilling.model.pet import Pet`

Solution 2:
Before importing the package, adjust the maximum recursion limit as shown below:
```
import sys
sys.setrecursionlimit(1500)
import fds.sdk.ProcuretoPayInvoiceandBilling
from fds.sdk.ProcuretoPayInvoiceandBilling.apis import *
from fds.sdk.ProcuretoPayInvoiceandBilling.models import *
```

## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

